[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbl-ingress"
version = "0.1.0"
description = "Admission and shaping layer for dbl-core"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Lukas Pfister" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "dbl-core==0.3.1",
    "kl-kernel-logic>=0.5.0,<0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.urls]
"Homepage" = "https://github.com/lukaspfister/dbl-ingress"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dbl_ingress = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --strict-markers"
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
